--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,13 @@ events {
     worker_connections 1024;
 }
 
+stream {
+    # Docker embedded DNS so nomad-server resolves in stream context
+    resolver 127.0.0.11 valid=10s;
+    error_log /var/log/nginx/stream_error.log warn;
+    include /etc/nginx/stream.d/*.conf;
+}
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -18,6 +25,8 @@ http {
     keepalive_timeout 65;
     gzip on;
 
-    # Include per-application server blocks (gitea, and more as needed)
+    # Upstreams (some populated by consul-template from Consul)
+    include /etc/nginx/upstreams/*.conf;
+    # Per-application server blocks (gitea, and more as needed)
     include /etc/nginx/conf.d/*.conf;
 }
