--- a/grafana/provisioning/datasources/datasources.yml
+++ b/grafana/provisioning/datasources/datasources.yml
@@ -1,4 +1,4 @@
-# Pre-configure Prometheus so Grafana can query metrics without manual setup.
+# Pre-configure Prometheus and Loki so Grafana can query metrics and logs without manual setup.
 apiVersion: 1
 
 datasources:
@@ -7,4 +7,10 @@ datasources:
     access: proxy
     url: http://prometheus:9090
     isDefault: true
+    editable: false
+  - name: Loki
+    type: loki
+    uid: loki
+    access: proxy
+    url: http://loki:3100
     editable: false
