--- a/nginx/conf.d/rabbitmq.bry.an.conf
+++ b/nginx/conf.d/rabbitmq.bry.an.conf
@@ -1,24 +1,24 @@
-# Gitea — https://git.bry.an
+# rabbitmq.bry.an — proxied to Nomad service "rabbitmq" (discovered via Consul)
+# Upstream rabbitmq_server is written by consul-template from Consul catalog
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name git.bry.an;
+    server_name rabbitmq.bry.an;
 
-    # Allow large uploads for Docker registry pushes (default is 1m)
-    client_max_body_size 0;
-
-    # Cert and key must be separate files; key must be the private key PEM
-    ssl_certificate     /etc/nginx/ssl/git.bry.an.pem;
-    ssl_certificate_key /etc/nginx/ssl/git.bry.an-key.pem;
+    ssl_certificate     /etc/nginx/ssl/rabbitmq.bry.an.pem;
+    ssl_certificate_key /etc/nginx/ssl/rabbitmq.bry.an-key.pem;
     ssl_session_timeout 1d;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
 
     location / {
-        proxy_pass http://gitea:3000;
+        proxy_pass http://rabbitmq_server;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 60s;
     }
 }
